--- a/iss.html
+++ b/iss.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-<div id ='map' style="width:1200px;heigh:800px;"></div>
-<scipt>
+<div id ='map' style="width:1200px;height:800px;"></div>
+<script>
 
 var map = L.map('map', {
     minZoom:1,
